--- a/src/components/HomePageComponents/TopMovies.module.css
+++ b/src/components/HomePageComponents/TopMovies.module.css
@@ -53,7 +53,7 @@
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  height: 400px; /* Ensure the height is sufficient to hold the content */
+  height: 410px; /* Ensure the height is sufficient to hold the content */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -76,7 +76,7 @@
 }
 
 .movieTitle {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin: 10px 0;
   white-space: nowrap; /* Prevent the text from wrapping */
   overflow: hidden; /* Hide any overflow text */
@@ -109,4 +109,68 @@
 .error {
   font-size: 1.5rem;
   color: red;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.paginationButton {
+  border: 1px solid #ddd; /* Match button borders to movie item borders */
+  border-radius: 5px; /* Rounded corners */
+  background-color: #f9f9f9; /* Match button background to movie item background */
+  padding: 10px 15px;
+  margin: 0 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  /* Smooth transition for hover effects */
+  min-width: 4%;
+}
+
+.paginationButton:hover {
+  background-color: #eaeaea; /* Match hover effect to movie items */
+}
+
+.activePage {
+  background-color: #007bff; /* Primary color for active page button */
+  color: #fff; /* White text for active button */
+  border: 1px solid #007bff; /* Match border to background for active button */
+}
+
+.disabledButton {
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
+.paginationButton:disabled {
+  background-color: #e0e0e0;
+  border: 1px solid #ccc;
+}
+
+/* TopMovies.module.css */
+
+/* Existing styles remain the same */
+
+.toggleButton {
+  border: 1px solid #007bff; /* Match button border color to the active page button */
+  border-radius: 5px; /* Rounded corners */
+  background-color: #007bff; /* Primary color */
+  color: #fff; /* White text */
+  padding: 10px 15px;
+  margin: 0 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effects */
+}
+
+.toggleButton:hover {
+  background-color: #0056b3; /* Darker shade for hover effect */
+}
+.topControls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px; /* Space between controls and movie list */
 }
